--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal-image": "^2.6.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.20.0",
     "swiper": "^11.0.5"
