--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flagkit": "^2.0.4",
     "react-modal-image": "^2.6.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.20.0",
