--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-modal-image": "^2.6.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.20.0",
+    "react-spinners": "^0.13.8",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
